Added dockerfile